[gd_scene load_steps=8 format=3 uid="uid://b3ruu3xegfccq"]

[ext_resource type="Script" uid="uid://kgsd2ge22qph" path="res://scripts/menus_ui/ship_selection_menu.gd" id="1_3djgo"]
[ext_resource type="Texture2D" uid="uid://digj0ww7e6iir" path="res://assets/textures/UI/starbase_background.png" id="6_pmy4k"]
[ext_resource type="Texture2D" uid="uid://cn6hk6q2vqimy" path="res://assets/textures/UI/gray_background.png" id="7_6y24t"]
[ext_resource type="FontFile" uid="uid://biu3eo18bcl6f" path="res://assets/font/ethnocentric rg.ttf" id="12_lf3ul"]
[ext_resource type="FontFile" uid="uid://bfelmvtojob74" path="res://assets/font/Univers UltraCondensed Regular.ttf" id="13_cq87e"]
[ext_resource type="PackedScene" uid="uid://djjxdvhjd147f" path="res://scenes/menus_ui/ship_frame.tscn" id="13_y5r6i"]
[ext_resource type="AudioStream" uid="uid://303say1uvlnl" path="res://assets/audio/engine_ambience_loud.ogg" id="14_5cpsl"]

[node name="ShipSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_3djgo")

[node name="starbase_back" type="TextureRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_pmy4k")

[node name="stats_banner" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("12_lf3ul")
theme_override_font_sizes/font_size = 25
text = "ship Stats:"
horizontal_alignment = 1

[node name="ship_selection_area" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 59.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2

[node name="horizon_gray" type="TextureRect" parent="ship_selection_area"]
modulate = Color(1, 1, 1, 0.470588)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(480, 270)
texture = ExtResource("7_6y24t")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="ship_selection_area"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -325.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Grid" type="VBoxContainer" parent="ship_selection_area/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25
alignment = 1

[node name="FederationGrid" type="HBoxContainer" parent="ship_selection_area/MarginContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="Control" parent="ship_selection_area/MarginContainer/Grid/FederationGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 54
grayed_out = false
ship_faction = 0

[node name="Control2" parent="ship_selection_area/MarginContainer/Grid/FederationGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 38
ship_faction = 0

[node name="Control3" parent="ship_selection_area/MarginContainer/Grid/FederationGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 5
ship_faction = 0

[node name="Control4" parent="ship_selection_area/MarginContainer/Grid/FederationGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 47
ship_faction = 0

[node name="Control5" parent="ship_selection_area/MarginContainer/Grid/FederationGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 63
ship_faction = 0

[node name="Control6" parent="ship_selection_area/MarginContainer/Grid/FederationGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 51
ship_faction = 0

[node name="KlingonGrid" type="HBoxContainer" parent="ship_selection_area/MarginContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="Control" parent="ship_selection_area/MarginContainer/Grid/KlingonGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 83
ship_faction = 1

[node name="Control2" parent="ship_selection_area/MarginContainer/Grid/KlingonGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 42
ship_faction = 1

[node name="Control3" parent="ship_selection_area/MarginContainer/Grid/KlingonGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 55
ship_faction = 1

[node name="Control4" parent="ship_selection_area/MarginContainer/Grid/KlingonGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
ship_faction = 1

[node name="Control5" parent="ship_selection_area/MarginContainer/Grid/KlingonGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
ship_faction = 1

[node name="Control6" parent="ship_selection_area/MarginContainer/Grid/KlingonGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
ship_faction = 1

[node name="RomulanGrid" type="HBoxContainer" parent="ship_selection_area/MarginContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="Control" parent="ship_selection_area/MarginContainer/Grid/RomulanGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 57
ship_faction = 2

[node name="Control2" parent="ship_selection_area/MarginContainer/Grid/RomulanGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 84
ship_faction = 2

[node name="Control3" parent="ship_selection_area/MarginContainer/Grid/RomulanGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 31
ship_faction = 2

[node name="Control4" parent="ship_selection_area/MarginContainer/Grid/RomulanGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
ship_faction = 2

[node name="Control5" parent="ship_selection_area/MarginContainer/Grid/RomulanGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
ship_faction = 2

[node name="Control6" parent="ship_selection_area/MarginContainer/Grid/RomulanGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
ship_faction = 2

[node name="NeutralGrid" type="HBoxContainer" parent="ship_selection_area/MarginContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="Control" parent="ship_selection_area/MarginContainer/Grid/NeutralGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 80

[node name="Control2" parent="ship_selection_area/MarginContainer/Grid/NeutralGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 68

[node name="Control3" parent="ship_selection_area/MarginContainer/Grid/NeutralGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 14

[node name="Control4" parent="ship_selection_area/MarginContainer/Grid/NeutralGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 26

[node name="Control5" parent="ship_selection_area/MarginContainer/Grid/NeutralGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 43

[node name="Control6" parent="ship_selection_area/MarginContainer/Grid/NeutralGrid" instance=ExtResource("13_y5r6i")]
layout_mode = 2
current_ship_type = 81

[node name="vert_gray" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.470588)
z_index = -1
custom_minimum_size = Vector2(0, 540)
layout_mode = 2
offset_left = 635.0
offset_right = 960.0
offset_bottom = 540.0
size_flags_horizontal = 3
color = Color(0.415686, 0.415686, 0.415686, 1)

[node name="Stats_Container" type="Control" parent="."]
anchors_preset = 0
offset_left = 635.0
offset_right = 960.0
offset_bottom = 540.0

[node name="MarginContainer" type="MarginContainer" parent="Stats_Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ship_info" type="VBoxContainer" parent="Stats_Container/MarginContainer"]
layout_mode = 2

[node name="closeMenuButton" type="Button" parent="Stats_Container/MarginContainer/ship_info"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="Stats_Container/MarginContainer/ship_info"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 20

[node name="stats_banner" type="Label" parent="Stats_Container/MarginContainer/ship_info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("12_lf3ul")
theme_override_font_sizes/font_size = 25
text = "ship Stats:"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="Stats_Container/MarginContainer/ship_info"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="ship_name" type="RichTextLabel" parent="Stats_Container/MarginContainer/ship_info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("13_cq87e")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Ship Name: "
fit_content = true
scroll_active = false

[node name="faction" type="RichTextLabel" parent="Stats_Container/MarginContainer/ship_info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("13_cq87e")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
text = "Faction: "
fit_content = true
scroll_active = false

[node name="health_stat" type="RichTextLabel" parent="Stats_Container/MarginContainer/ship_info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("13_cq87e")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Health: "
fit_content = true
scroll_active = false

[node name="shield_stat" type="RichTextLabel" parent="Stats_Container/MarginContainer/ship_info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("13_cq87e")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Shield: "
fit_content = true
scroll_active = false

[node name="weapon" type="RichTextLabel" parent="Stats_Container/MarginContainer/ship_info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("13_cq87e")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Default Weapon: "
fit_content = true
scroll_active = false

[node name="speed_stat" type="RichTextLabel" parent="Stats_Container/MarginContainer/ship_info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("13_cq87e")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Max Speed: "
fit_content = true
scroll_active = false

[node name="maneuver_stat" type="RichTextLabel" parent="Stats_Container/MarginContainer/ship_info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("13_cq87e")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Maneuverability: "
fit_content = true
scroll_active = false

[node name="warp_stat" type="RichTextLabel" parent="Stats_Container/MarginContainer/ship_info"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("13_cq87e")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Antimatter:"
fit_content = true
scroll_active = false

[node name="ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_5cpsl")
volume_db = -15.634

[connection signal="pressed" from="Stats_Container/MarginContainer/ship_info/closeMenuButton" to="." method="_on_close_menu_button_pressed"]
